# halaqat_api/routes/api.php
@@ -11,6 +11,7 @@ use App\Http\Controllers\Api\V1\Halaqas\ListHalaqasController;
 use App\Http\Controllers\Api\V1\Halaqas\SetHalaqaStatusController;
 use App\Http\Controllers\Api\V1\Halaqas\UpdateHalaqaController;
 use App\Http\Controllers\Api\V1\Memberships\AssignStudentToHalaqaController;
+use App\Http\Controllers\Api\V1\Memberships\ListHalaqaMembershipsController;
 use App\Http\Controllers\Api\V1\Memberships\ListHalaqaStudentsController;
 use App\Http\Controllers\Api\V1\Memberships\RemoveStudentFromHalaqaController;
 use App\Http\Controllers\Api\V1\Memberships\UpdateMembershipController;
@@ -95,6 +96,7 @@ Route::prefix('v1')->group(function (): void {
         Route::post('halaqas/{halaqa}/deactivate', [SetHalaqaStatusController::class, 'deactivate']);
         Route::get('halaqas/{halaqa}/students', ListHalaqaStudentsController::class);
         Route::post('halaqas/{halaqa}/students', AssignStudentToHalaqaController::class);
+        Route::get('halaqas/{halaqa}/memberships', ListHalaqaMembershipsController::class);
         Route::patch('halaqas/{halaqa}/memberships/{membership}', UpdateMembershipController::class);
         Route::delete('halaqas/{halaqa}/memberships/{membership}', RemoveStudentFromHalaqaController::class);
 
